--- a/public/inicio.html
+++ b/public/inicio.html
@@ -38,7 +38,7 @@
 
         <h5 class="no-tienes-cuenta">
             ¿No tienes una cuenta?
-            <a href="#"><b></b>Registrar</b></a>
+            <a href="registro.html"><b></b>Registrar</b></a>
         </h5>
     </form>
 <script src="client.js"></script>
