--- a/public/registro.html
+++ b/public/registro.html
@@ -53,7 +53,7 @@
 
     <h5 class="no-tienes-cuenta">
         ¿Ya tienes una cuenta?
-        <a href="#"><b></b>Iniciar Sesión</b></a>
+        <a href="inicio.html"><b></b>Iniciar Sesión</b></a>
     </h5>
 </form>
 <script src="client.js"></script>
